test: 测试代码兼容 JDK8 API